ICE-2881 tweaked splash screen width and margin to avoid flicker when moving to an example.  For rime theme only.

--- a/icefaces/trunk/icefaces/samples/component-showcase/common-web/css/showcase_layout.css
+++ b/icefaces/trunk/icefaces/samples/component-showcase/common-web/css/showcase_layout.css
@@ -32,8 +32,8 @@
  */
 .splashContainer{
     height:432px;
-    margin-top:30px;
-    width:680px;
+    margin-top:33px;
+    width:681px;
 }
 .buttonsAndLinksContainer{
     width:500px;
